# SapaSDK

./: README.md
SapaSDK/: .gitignore  CMakeLists.txt  README.md
SapaSDK/CLI_Client/: CLI_Client.cpp  CLI_Client.h  CMakeLists.txt
SapaSDK/SDK/: CMakeLists.txt  README.md  neuron.cpp  structure.cpp
SapaSDK/SDK/include/: hh_const.h  neuralMath.h  neuron.h  position.h  sapa_sdk.h  structure.h
SapaSDK/SapaLang/: CMakeLists.txt  sapa_lang.cpp
SapaSDK/SapaLang/include/: lexeme.h  sapa_lang.h
SapaSDK/SimCore/: CMakeLists.txt  runner.cpp  sim_core.cpp
SapaSDK/SimCore/include/: sim_core.h
SapaSDK/Tests/: CMakeLists.txt  TestMain.cpp
SapaSDK/Tests/test_data/scripts/: basic_circuit.sapa
